--- a/settings.json
+++ b/settings.json
@@ -11,6 +11,11 @@
 	"window.menuBarVisibility": "toggle",
 
 	//Prettier
+	"[csharp]": {
+		"editor.defaultFormatter": "ms-dotnettools.csharp"
+	},
+	"editor.formatOnType": true,
+	"csharp.suppressProjectJsonWarning": true,
 	"prettier.useTabs": true,
 	"prettier.semi": false,
 	"prettier.jsxSingleQuote": true,
@@ -25,6 +30,7 @@
 
 	//Workbench
 	"workbench.iconTheme": "material-icon-theme",
+	"workbench.colorTheme": "Duck in the Lake",
 	"workbench.editor.editorActionsLocation": "hidden",
 	"workbench.editor.empty.hint": "hidden",
 	"workbench.layoutControl.enabled": false,
@@ -32,8 +38,8 @@
 	"workbench.list.smoothScrolling": true,
 	"workbench.tree.indent": 18,
 	"workbench.panel.showLabels": false,
-	"workbench.colorTheme": "Duck in the Lake",
 	"workbench.statusBar.visible": false,
+	"workbench.activityBar.location": "hidden",
 
 	//Editor
 	"editor.cursorStyle": "line",
@@ -54,33 +60,33 @@
 	"editor.minimap.enabled": false,
 
 	//Breadcrumbs
-	"breadcrumbs.showKeys": false,
-	"breadcrumbs.showFiles": false,
-	"breadcrumbs.symbolPath": "off",
-	"breadcrumbs.showBooleans": false,
-	"breadcrumbs.showClasses": false,
-	"breadcrumbs.showConstants": false,
-	"breadcrumbs.showConstructors": false,
-	"breadcrumbs.showEnumMembers": false,
-	"breadcrumbs.showEvents": false,
-	"breadcrumbs.showFields": false,
-	"breadcrumbs.showEnums": false,
-	"breadcrumbs.showFunctions": false,
-	"breadcrumbs.showInterfaces": false,
-	"breadcrumbs.showMethods": false,
-	"breadcrumbs.showModules": false,
-	"breadcrumbs.showNamespaces": false,
-	"breadcrumbs.showNull": false,
-	"breadcrumbs.showNumbers": false,
-	"breadcrumbs.showObjects": false,
-	"breadcrumbs.showOperators": false,
-	"breadcrumbs.showPackages": false,
-	"breadcrumbs.showProperties": false,
-	"breadcrumbs.showStrings": false,
-	"breadcrumbs.showStructs": false,
-	"breadcrumbs.showTypeParameters": false,
-	"breadcrumbs.showVariables": false,
-	"breadcrumbs.icons": false,
-	"breadcrumbs.showArrays": false,
-	"workbench.activityBar.location": "hidden"
+	"breadcrumbs.enabled": false
+	//"breadcrumbs.showKeys": false,
+	//"breadcrumbs.showFiles": false,
+	//"breadcrumbs.symbolPath": "off",
+	//"breadcrumbs.showBooleans": false,
+	//"breadcrumbs.showClasses": false,
+	//"breadcrumbs.showConstants": false,
+	//"breadcrumbs.showConstructors": false,
+	//"breadcrumbs.showEnumMembers": false,
+	//"breadcrumbs.showEvents": false,
+	//"breadcrumbs.showFields": false,
+	//"breadcrumbs.showEnums": false,
+	//"breadcrumbs.showFunctions": false,
+	//"breadcrumbs.showInterfaces": false,
+	//"breadcrumbs.showMethods": false,
+	//"breadcrumbs.showModules": false,
+	//"breadcrumbs.showNamespaces": false,
+	//"breadcrumbs.showNull": false,
+	//"breadcrumbs.showNumbers": false,
+	//"breadcrumbs.showObjects": false,
+	//"breadcrumbs.showOperators": false,
+	//"breadcrumbs.showPackages": false,
+	//"breadcrumbs.showProperties": false,
+	//"breadcrumbs.showStrings": false,
+	//"breadcrumbs.showStructs": false,
+	//"breadcrumbs.showTypeParameters": false,
+	//"breadcrumbs.showVariables": false,
+	//"breadcrumbs.icons": false,
+	//"breadcrumbs.showArrays": false
 }
