--- a/settings.json
+++ b/settings.json
@@ -14,13 +14,13 @@
 	"[csharp]": {
 		"editor.defaultFormatter": "ms-dotnettools.csharp"
 	},
-	"editor.formatOnType": true,
-	"csharp.suppressProjectJsonWarning": true,
 	"prettier.useTabs": true,
 	"prettier.semi": false,
 	"prettier.jsxSingleQuote": true,
 	"prettier.singleQuote": true,
 	"prettier.arrowParens": "avoid",
+	"editor.formatOnType": true,
+	"csharp.suppressProjectJsonWarning": true,
 
 	//Other
 	"glassit.alpha": 250,
@@ -30,18 +30,22 @@
 
 	//Workbench
 	"workbench.iconTheme": "material-icon-theme",
-	"workbench.colorTheme": "Duck in the Lake",
 	"workbench.editor.editorActionsLocation": "hidden",
 	"workbench.editor.empty.hint": "hidden",
 	"workbench.layoutControl.enabled": false,
+	"workbench.activityBar.location": "hidden",
 	"workbench.startupEditor": "none",
 	"workbench.list.smoothScrolling": true,
 	"workbench.tree.indent": 18,
 	"workbench.panel.showLabels": false,
+	"workbench.colorTheme": "Duck in the Lake",
 	"workbench.statusBar.visible": false,
-	"workbench.activityBar.location": "hidden",
+	"workbench.preferredHighContrastColorTheme": "RetroDark",
 
 	//Editor
+	"[shellscript]": {
+		"editor.defaultFormatter": "foxundermoon.shell-format"
+	},
 	"editor.cursorStyle": "line",
 	"editor.cursorBlinking": "expand",
 	"editor.mouseWheelZoom": true,
@@ -60,33 +64,37 @@
 	"editor.minimap.enabled": false,
 
 	//Breadcrumbs
-	"breadcrumbs.enabled": false
-	//"breadcrumbs.showKeys": false,
-	//"breadcrumbs.showFiles": false,
-	//"breadcrumbs.symbolPath": "off",
-	//"breadcrumbs.showBooleans": false,
-	//"breadcrumbs.showClasses": false,
-	//"breadcrumbs.showConstants": false,
-	//"breadcrumbs.showConstructors": false,
-	//"breadcrumbs.showEnumMembers": false,
-	//"breadcrumbs.showEvents": false,
-	//"breadcrumbs.showFields": false,
-	//"breadcrumbs.showEnums": false,
-	//"breadcrumbs.showFunctions": false,
-	//"breadcrumbs.showInterfaces": false,
-	//"breadcrumbs.showMethods": false,
-	//"breadcrumbs.showModules": false,
-	//"breadcrumbs.showNamespaces": false,
-	//"breadcrumbs.showNull": false,
-	//"breadcrumbs.showNumbers": false,
-	//"breadcrumbs.showObjects": false,
-	//"breadcrumbs.showOperators": false,
-	//"breadcrumbs.showPackages": false,
-	//"breadcrumbs.showProperties": false,
-	//"breadcrumbs.showStrings": false,
-	//"breadcrumbs.showStructs": false,
-	//"breadcrumbs.showTypeParameters": false,
-	//"breadcrumbs.showVariables": false,
-	//"breadcrumbs.icons": false,
-	//"breadcrumbs.showArrays": false
+	"breadcrumbs.enabled": false,
+	"breadcrumbs.showKeys": false,
+	"breadcrumbs.showFiles": false,
+	"breadcrumbs.symbolPath": "off",
+	"breadcrumbs.showBooleans": false,
+	"breadcrumbs.showClasses": false,
+	"breadcrumbs.showConstants": false,
+	"breadcrumbs.showConstructors": false,
+	"breadcrumbs.showEnumMembers": false,
+	"breadcrumbs.showEvents": false,
+	"breadcrumbs.showFields": false,
+	"breadcrumbs.showEnums": false,
+	"breadcrumbs.showFunctions": false,
+	"breadcrumbs.showInterfaces": false,
+	"breadcrumbs.showMethods": false,
+	"breadcrumbs.showModules": false,
+	"breadcrumbs.showNamespaces": false,
+	"breadcrumbs.showNull": false,
+	"breadcrumbs.showNumbers": false,
+	"breadcrumbs.showObjects": false,
+	"breadcrumbs.showOperators": false,
+	"breadcrumbs.showPackages": false,
+	"breadcrumbs.showProperties": false,
+	"breadcrumbs.showStrings": false,
+	"breadcrumbs.showStructs": false,
+	"breadcrumbs.showTypeParameters": false,
+	"breadcrumbs.showVariables": false,
+	"breadcrumbs.icons": false,
+	"breadcrumbs.showArrays": false,
+
+	//Terminal
+	"terminal.integrated.cursorStyleInactive": "line",
+	"terminal.integrated.defaultProfile.linux": "zsh"
 }
